2005-07-19  Ethan Merritt  <merritt@u.washington.edu

	* term/cgm.trm: Add a warning that Win2000 cannot handle filled
	polygons with more than 50 vertices. Not our fault! Bug #955074.

2005-07-18  Ethan Merritt  <merritt@u.washington.edu

	* src/datafile.c (df_parse_string_field): Fix tab-containing string
	constant which was broken when indent replaced tabs with spaces.

	* configure.in src/term.h term/post.h term/post.trm term/pslatex.trm:
	Repair the ordering of configuration options for building the post,
	epslatex, and pslatex terminals.  This selection is now made at the top
	of term.h, as is selection of the enhanced text stringlength estimation
	pseudo-terminal.

2005-07-16  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c (load_command): Issue an error message if any
	tokens or further commands follow a "load <file>" command.
	Sourceforge patch #1210835.

2005-07-16  Ethan Merritt  <merritt@u.washington.edu

	* demo/stringvar.dem: Add a demo showing a plot command that
	generates datafile names via a string-valued function, now possible
	because of the new string_or_expression code.

2005-07-16  Juergen Wieferink  <wieferink@freenet.de>

	Allow a single plot or splot command to contain a mixture of 
	functions, e.g. sin(x), and constant expressions including
	string-valued constant expressions, e.g. sprintf("file.%d",n).

	* src/datafile.c (df_open) src/datafile.h src/plot2d.c
	src/plot3d.c src/fit.c src/set.c:
	Parse filename from plot/splot/fit command before calling df_open(),
	and pass the resulting string to df_open() as a new argument.

	* src/parse.c (string_or_expression) src/parse.h:
	New function that can safely parse either a constant expression
	or a dummy function.  string_or_expression() will return a pointer
	to a string if it successfully parsed a string-valued expression.
	It will return a pointer to an action table if it successfully
	parsed a dummy function. If it parsed a non-string expression, both